Replace usage of '.isEmpty()' with '.isBlank()' to follow modern Java conventions